--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "DetailedErrors": true,
+  "ConnectionStrings": {
+    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
